# rust-rgb

./: Cargo.toml  LICENSE-MIT
.cargo/: config.toml
src/: artnet.rs  buffer.rs  error.rs  main.rs  pd.rs  web.rs  ws2812.rs
src/html/: index.html
src/pd/: bq25620.rs  fusb302.rs  i2c.rs  mod.rs  proto.rs
