[package]
name = "rust-rgb"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2021"
license = "MIT"

[dependencies]
esp32c3-hal = { version = "0.7.0", features = ["embassy", "embassy-time-timg0", "async", "smartled" ] }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
log = "0.4.17"
embedded-svc = { version = "0.23.1", default-features = false, features = [] }
embedded-io = { version="0.4.0", features=["async"] }
num-derive = { version = "0.3", features = ["full-syntax"] }
num-traits = { version = "0.2", default-features = false }
esp-wifi = { path = "../esp-wifi/esp-wifi", features = ["embassy-net", "embedded-svc", "esp32c3", "esp32c3-async", "wifi"] }
embassy-sync = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"]}
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
esp-println = { version = "0.3.1", features = [ "esp32c3", "log" ] }
esp-backtrace = { version = "0.4.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
httparse = { version = "1.8.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
embedded-hal-async = { version = "0.2.0-alpha.0" }
bitfield-struct = "0.3"

[build-dependencies]
riscv-target = { version = "0.1.2" }

[dev-dependencies]

[features]
